<resources>
    <string name="app_name">Deniz_Evrendilek_MyRuns5</string>
    <string name="myruns">MyRuns5</string>

    <string-array name="InputType">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="ActivityType">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <!-- Profile -->
    <string name="profile_pic_title">Profile Picture</string>
    <string name="profile_pic_select">Change Picture</string>
    <string name="name_input_label">Name</string>
    <string name="name_input_hint">Your Name</string>
    <string name="email_input_label">Email</string>
    <string name="email_input_hint">Your Email</string>
    <string name="phone_input_label">Phone</string>
    <string name="phone_number_input_hint">Your Phone Number</string>
    <string name="gender_radio_label">Gender</string>
    <string name="female_radio_label">Female</string>
    <string name="male_radio_label">Male</string>
    <string name="class_input_label">Class</string>
    <string name="major_input_label">Major</string>
    <string name="major_input_hint">Your Major</string>
    <string name="classYear_input_hint">eg. 2012</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="content_description_tabs">Tabs</string>
    <string name="input_type_title">Input Type</string>
    <string name="activity_type_title">Activity Type</string>
    <string name="button_start">START</string>
    <string name="menu_item_settings">Settings</string>
    <string name="exercise_entry_display_label_input_type">Input Type</string>
    <string name="exercise_entry_display_label_exercise_type">Exercise Type</string>
    <string name="exercise_entry_display_label_date_and_time">Date and time</string>
    <string name="exercise_entry_display_label_duration">Duration</string>
    <string name="exercise_entry_display_label_distance">Distance</string>
    <string name="exercise_entry_display_label_calories">Calories</string>
    <string name="exercise_entry_display_label_heart_rate">Heart Rate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>